<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:padding="5dp"
    android:layout_gravity="center">
<!--    <TextView-->
<!--        android:id="@+id/txtclose"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="X"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_gravity="end"-->
<!--        android:gravity="center"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#017A6F"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtclose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="X"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Edit Application Details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/backgroundURLLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/enter_backgroundURL"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/backgroundURL"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/add_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backgroundURLLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_email_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:text="Enter title and agent details:"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/horizontal_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/title_email_heading"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleNameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="0.5"
                    android:hint="@string/enter_title"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/agentEmailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="0.5"
                    android:hint="@string/enter_agentEmail"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/agentEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <ListView
                android:id="@+id/idLVLanguages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:background="#000000"
            android:backgroundTint="#000000"
            android:gravity="center_horizontal"
            android:layout_below="@+id/add_details_layout"
            android:drawableLeft="@drawable/ic_baseline_add_box_24"
            android:text="Add"
            android:textColor="#FFFFFF"></Button>

        <ImageButton
            android:id="@+id/button_popup"
            android:layout_width="@dimen/icon_size_normal"
            android:layout_height="@dimen/icon_size_normal"
            android:layout_below="@+id/addButton"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:background="#FFFFFF"
            android:src="@drawable/ic_baseline_send_24" />
    </RelativeLayout>

</LinearLayout>
