<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".EditPageDetailsActivity"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/rootRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="5dp"
            tools:ignore="MissingConstraints">
            <!--    <TextView-->
            <!--        android:id="@+id/txtclose"-->
            <!--        android:layout_width="30dp"-->
            <!--        android:layout_height="30dp"-->
            <!--        android:textColor="@color/white"-->
            <!--        android:text="X"-->
            <!--        android:textStyle="bold"-->
            <!--        android:layout_gravity="end"-->
            <!--        android:gravity="center"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#017A6F"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="Edit Application Details"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/backgroundURLLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/enter_backgroundURL"
                    android:paddingBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/backgroundURL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/add_details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/backgroundURLLayout"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_email_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="5dp"
                        android:text="Enter title and agent details:"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/horizontal_layout"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_below="@+id/title_email_heading"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/titleNameLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="0.5"
                            android:hint="@string/enter_title"
                            android:paddingBottom="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/titleName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/agentEmailLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:layout_weight="0.5"
                            android:hint="@string/enter_agentEmail"
                            android:paddingBottom="10dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/agentEmail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageButton
                            android:id="@+id/addButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/addButton"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center_vertical"
                            android:background="#FFFFFF"
                            android:src="@drawable/ic_baseline_add_box_24" />
                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/delete_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horizontal_layout"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/add_details_layout"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="Delete All" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/listview_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/delete_layout"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ListView
                        android:id="@+id/idLVLanguages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/submit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/listview_layout"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/add_details_layout"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:text="Submit" />
                </LinearLayout>

                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>